force-app/main/default/objects/Account/fields/abcd__c.field-meta.xml
<CustomField>
    <fullName>abcd__c</fullName>
    <label>abcd</label>
    <length>12</length>
    <type>Text</type>
</CustomField>