force-app/main/default/objects/Account/fields/qwerty__c.field-meta.xml
<CustomField>
    <fullName>qwerty__c</fullName>
    <label>qwerty</label>
    <length>12</length>
    <type>Text</type>
</CustomField>