force-app/main/default/objects/Account/fields/tufut__c.field-meta.xml
<CustomField>
    <fullName>tufut__c</fullName>
    <label>tufut</label>
    <length>12</length>
    <type>Text</type>
</CustomField>